deploy-repo/go-app-cicd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app-cicd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-cicd
  namespace: go-app-cicd
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: go-app-cicd
  template:
    metadata:
      labels:
        app: go-app-cicd
    spec:
      # uncomment if the Docker Hub repo is PRIVATE
      # imagePullSecrets:
      #   - name: dockerhub-cred
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          # CI sed will rewrite this entire line to: image: "jakirhosen9395/cicd-go-app:${BUILD_ID}"
          image: "jakirhosen9395/cicd-go-app:0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-cicd
  namespace: go-app-cicd
spec:
  selector:
    app: go-app-cicd
  type: LoadBalancer
  ports:
    - name: http
      port: 9001
      targetPort: 9000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: go-app-cicd-allow-namespace
  namespace: go-app-cicd
spec:
  podSelector:
    matchLabels:
      app: go-app-cicd
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector: {}   # same namespace
      ports:
        - protocol: TCP
          port: 9000
